--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.0.2",
+    "@reduxjs/toolkit": "^2.2.7",
     "dotenv": "^16.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.26.2"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
