--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "cd client && npm run dev",
     "server": "cd server && nodemon server.js",
+    "prod": "cd server && node server.js",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
