--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "client": "cd client && npm run dev",
     "server": "cd server && nodemon server.js",
     "prod": "cd server && node server.js",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "build": "cd client && npm run build"
   },
   "keywords": [],
   "author": "",
